# hadron

./: run_mypy.py  run_project_tests.py  run_tests.py
.github/: README.md
.github/workflows/: codeql-analysis.yml  cygwin.yml  images.yml  macos.yml  msys2.yml  nonnative.yml  os_comp.yml  website.yml
cross/: wasm.txt
docs/: sitemap.txt
docs/markdown/: Node-API-module.md
docs/theme/extra/templates/: navbar_links.html
man/: meson.1
mesonbuild/: arglist.py  coredata.py  environment.py  machinefile.py  minstall.py  options.py
mesonbuild/cmake/: common.py  generator.py  interpreter.py  traceparser.py  tracetargets.py
mesonbuild/compilers/: compilers.py  cpp.py  detect.py
mesonbuild/compilers/mixins/: clike.py  emscripten.py  gnu.py  visualstudio.py
mesonbuild/interpreter/: interpreter.py  kwargs.py
mesonbuild/linkers/: linkers.py
mesonbuild/modules/: node-api.py
mesonbuild/scripts/: depfixer.py
mesonbuild/utils/: universal.py
test cases/cmake/31 windows galore/: main.cpp  meson.build
test cases/cmake/31 windows galore/subprojects/subproj/: CMakeLists.txt
test cases/node-api/1 hello_world/: test.json
test cases/node-api/7 environments/: meson.build  test-wasm-noweb.mjs  test-wasm.mjs  test.json
test cases/node-api/9 default visibility/: hello_world.cc  meson.build  package-lock.json  package.json  test-native.cjs  test-wasm.mjs  test.json
unittests/: allplatformstests.py  internaltests.py  machinefiletests.py  platformagnostictests.py
